--- a/iBudget/iBudget.csproj
+++ b/iBudget/iBudget.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" PrivateAssets="All" />
+    <PackageReference Include="PusherServer" Version="4.1.0" />
   </ItemGroup>
 
 </Project>
