--- a/iBudget/iBudget.csproj
+++ b/iBudget/iBudget.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" PrivateAssets="All" />
     <PackageReference Include="PusherServer" Version="4.1.0" />
+    <PackageReference Include="Stripe" Version="1.12.0" />
   </ItemGroup>
 
 </Project>
