added stripe api

--- a/iBudget/appsettings.json
+++ b/iBudget/appsettings.json
@@ -9,7 +9,7 @@
   },
   "AllowedHosts": "*",
   "Stripe": {
-    "SecretKey": "",
-    "PublishableKey": ""
+    "SecretKey":"sk_test_RuiCRSwIcwh8mdIGPFkeyYaJ", 
+    "PublishableKey": "pk_test_d8nTJPp7ov2ojlCwInVAxhxF"
   }
-}
+  }
