--- a/iBudget/appsettings.json
+++ b/iBudget/appsettings.json
@@ -9,7 +9,8 @@
   },
   "AllowedHosts": "*",
   "Stripe": {
-    "SecretKey":"sk_test_RuiCRSwIcwh8mdIGPFkeyYaJ", 
+    "SecretKey": "sk_test_RuiCRSwIcwh8mdIGPFkeyYaJ",
     "PublishableKey": "pk_test_d8nTJPp7ov2ojlCwInVAxhxF"
-  }
-  }
+  },
+  "HelloWorld": "Hello World from Configuration"
+}
