--- a/iBudget/iBudget.csproj
+++ b/iBudget/iBudget.csproj
@@ -6,8 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Cronofy" Version="0.25.0" />
+    <PackageReference Include="Kendo.Mvc" Version="2016.2.617" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" PrivateAssets="All" />
+    <PackageReference Include="Plaid.Net" Version="1.2.6.0" />
     <PackageReference Include="PusherServer" Version="4.1.0" />
     <PackageReference Include="Stripe" Version="1.12.0" />
     <PackageReference Include="Stripe.net" Version="19.10.0" />
