--- a/iBudget/iBudget.csproj
+++ b/iBudget/iBudget.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" PrivateAssets="All" />
     <PackageReference Include="Plaid.Net" Version="1.2.6.0" />
     <PackageReference Include="PusherServer" Version="4.1.0" />
+    <PackageReference Include="SendGrid" Version="9.10.0" />
     <PackageReference Include="Stripe" Version="1.12.0" />
     <PackageReference Include="Stripe.net" Version="19.10.0" />
   </ItemGroup>
