--- a/iBudget/iBudget.csproj
+++ b/iBudget/iBudget.csproj
@@ -15,6 +15,8 @@
     <PackageReference Include="SendGrid" Version="9.10.0" />
     <PackageReference Include="Stripe" Version="1.12.0" />
     <PackageReference Include="Stripe.net" Version="19.10.0" />
+    <PackageReference Include="Twilio" Version="5.21.0" />
+    <PackageReference Include="Twilio.AspNet.Core" Version="5.20.1" />
   </ItemGroup>
 
   <ItemGroup>
